# app.js
@@ -6,6 +6,7 @@ const docsRoutes = require("./docs/swagger.routes")
 const authRoutes = require("./src/modules/auth/auth.routes")
 const usersRoutes = require("./src/modules/users/users.routes")
 const coursesRoutes = require("./src/modules/courses/courses.routes")
+const tasksRoutes = require("./src/modules/tasks/tasks.routes")
 
 const app = express();
 
@@ -22,6 +23,7 @@ app.use("/doc" , docsRoutes);
 app.use("/auth" , authRoutes);
 app.use("/users" , usersRoutes);
 app.use("/courses" , coursesRoutes);
+app.use("/tasks" , tasksRoutes);
 
 // Not-fond page
 app.use((req,res) => {
