# src/modules/tasks/tasks.routes.js
@@ -1,10 +1,10 @@
 const express = require("express");
-const upload = require("../../utils/taskUploader"); // آپلودر مولتر
+const upload = require("../../utils/taskUploader"); 
 const controller = require("./tasks.controller");
 const { auth } = require("../../middlewares/auth");
 const validate = require("../../middlewares/validate");
 const isAdminOrTeacher = require("../../middlewares/isAdminOrTeacher");
-const validator = require("./tasks.validator")
+const {createTaskValidator} = require("./tasks.validator")
 
 const router = express.Router();
 
@@ -12,7 +12,7 @@ router.post(
   "/",
   auth,
   upload.single("file"),
-  validator,
+  createTaskValidator,
   validate,
   controller.createTask
 );
@@ -22,5 +22,12 @@ router.get("/",auth, isAdminOrTeacher ,controller.getAllTasks);
 router.get("/:id",auth, isAdminOrTeacher,controller.getTaskById);
 
 router.patch("/:id/status",auth , isAdminOrTeacher ,controller.updateTaskStatus);
+
+router.patch(
+    "/:id/edit",
+    auth,
+    controller.editTaskByUser
+  );
+  
 
 module.exports = router
